src2/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountNumberUUID__c</fullName>
        <externalId>true</externalId>
        <label>Account Number UUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_Auto__c</fullName>
        <label>Account Number Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Telemetry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Telemetry Account</label>
        <referenceTo>NES_AccountTelemetry__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityStatus__c</fullName>
        <label>Activity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category2__c</fullName>
        <label>Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Category2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClubDate__c</fullName>
        <label>Club Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClubStatus__c</fullName>
        <label>Club Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connoisseur</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Ambassador</fullName>
                </value>
                <value>
                    <fullName>No_Segment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultBillingAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Billing Address</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultPaymentMode__c</fullName>
        <label>Default Payment Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultShippingAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Shipping Address</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Default Shipping Address)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnabledTechnologies__c</fullName>
        <label>Enabled Technologies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Vertuoline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Horeca_Segment__c</fullName>
        <label>Horeca Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A : Upscale</label>
                </value>
                <value>
                    <fullName>A+</fullName>
                    <label>A+ : Luxury</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B : Midscale</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C : Standard</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>O : Low-cost</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InputDate__c</fullName>
        <label>Input Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBlockedReason__c</fullName>
        <label>Is Blocked Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Limit</fullName>
                </value>
                <value>
                    <fullName>Reminder Level</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsBlocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDescalingAlertActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Descaling Alert Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReorderAlertActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reorder Alert Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Customer_Group__c</fullName>
        <label>Local Customer Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Main Contact)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterLastUpdate__c</fullName>
        <description>Last update in the master system.</description>
        <label>Master Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NES_LocallyManagedBy__c</fullName>
        <label>Locally Managed By</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_LowStockNotification__c</fullName>
        <label>Low Stock Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_ManagedBy__c</fullName>
        <label>Managed By</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nespro_Category__c</fullName>
        <label>Nespro Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>K&amp;I</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>HVC</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>CRC</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Undefined</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoMarketingQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Marketing Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POS_Group__c</fullName>
        <label>POS Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Local__c</fullName>
        <label>POS Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Quota__c</fullName>
        <description>Used for POS only</description>
        <label>POS Quota</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Organization</label>
        <referenceTo>Sales_Org__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StateInscriptionNumber__c</fullName>
        <label>State Inscription Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tariff__c</fullName>
        <label>Tariff</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxNumber__c</fullName>
        <label>Tax Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trusted_Agent__c</fullName>
        <label>Trusted Agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Partially Trusted</fullName>
                    <default>true</default>
                    <label>Partially Trusted</label>
                </value>
                <value>
                    <fullName>Trusted</fullName>
                </value>
                <value>
                    <fullName>Untrusted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1Locally_Managed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locally Managed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (1Locally Managed By)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1Managed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (1Managed By)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Internal_Account</fullName>
        <active>true</active>
        <label>Internal Reference Acocunt</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_B2B</fullName>
        <active>true</active>
        <label>Nespresso B2B</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_B2B_Agent</fullName>
        <active>true</active>
        <label>Nespresso B2B Agent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_B2C</fullName>
        <active>true</active>
        <label>Nespresso B2C</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_Client_Account</fullName>
        <active>true</active>
        <label>Nespresso Client Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_Hierarchy</fullName>
        <active>true</active>
        <label>Nespresso Hierarchy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_Third_Party</fullName>
        <active>true</active>
        <label>Nespresso Third Party</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>